--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/pure/pure-min.css" rel="stylesheet">
     <link href="assets/pure/grids-responsive-min.css" rel="stylesheet">
-    <meta name="description" content="">
+    <meta name="description" content="Online HTML5 radio player">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
