Modify title to HTML5 Radio

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>EmberRadio</title>
+    <title>An HTML5 radio</title>
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/pure/pure-min.css" rel="stylesheet">
     <link href="assets/pure/grids-responsive-min.css" rel="stylesheet">
